# MC714

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml
docker/: Dockerfile
report/: main.tex
scripts/: command.sh  demo_election.sh  demo_mutex.sh  run_local_cluster.sh
src/: bully.py  config.py  lamport.py  logging_utils.py  main.py  messages.py  node.py  ricart_agrawala.py  transport.py
tests/: helpers.py  test_bully.py  test_integration.py  test_lamport.py  test_messages.py  test_ricart_agrawala.py
