[project]
name = "mc714"
version = "0.1.0"
description = "Cluster distribuído MC714 — Lamport, Ricart-Agrawala e Bully"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.uv]
package = false
